--- a/projetpartone.ipynb
+++ b/projetpartone.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n"
    ]
   },
   {
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -403,8 +404,92 @@
    "metadata": {},
    "source": [
     "(b) Implement the user-based collaborative filtering approach, using the Pearson\n",
-    "correlation function for computing similarities between users (4 points), and (c) the\n",
-    "prediction function presented in class for predicting movies scores (4 points)."
+    "correlation function for computing similarities between users (4 points),"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "userId       1    2         3         4         5             6         7    \\\n",
+      "userId                                                                        \n",
+      "1       1.000000  0.0  0.079819  0.207983  0.268749 -2.916358e-01 -0.118773   \n",
+      "2       0.000000  1.0  0.000000  0.000000  0.000000  0.000000e+00 -0.991241   \n",
+      "3       0.079819  0.0  1.000000  0.000000  0.000000  7.850462e-17  0.000000   \n",
+      "4       0.207983  0.0  0.000000  1.000000 -0.336525  1.484982e-01  0.542861   \n",
+      "5       0.268749  0.0  0.000000 -0.336525  1.000000  4.316590e-02  0.158114   \n",
+      "\n",
+      "userId       8         9         10   ...       601           602       603  \\\n",
+      "userId                                ...                                     \n",
+      "1       0.469668  0.918559 -0.037987  ...  0.091574 -1.183502e-17 -0.061503   \n",
+      "2       0.000000  0.000000  0.037796  ... -0.387347  0.000000e+00 -1.000000   \n",
+      "3       0.000000  0.000000  0.000000  ...  0.000000  0.000000e+00  0.433200   \n",
+      "4       0.117851  0.000000  0.485794  ... -0.222113  3.966413e-01  0.090090   \n",
+      "5       0.028347  0.000000 -0.777714  ...  0.000000  1.533034e-01  0.234743   \n",
+      "\n",
+      "userId       604       605       606       607       608       609       610  \n",
+      "userId                                                                        \n",
+      "1      -0.407556 -0.164871  0.066378  0.174557  0.268070 -0.175412 -0.032086  \n",
+      "2       0.000000  0.000000  0.583333  0.000000 -0.125000  0.000000  0.623288  \n",
+      "3       0.000000  0.000000 -0.791334 -0.333333 -0.395092  0.000000  0.569562  \n",
+      "4      -0.080296  0.400124  0.144603  0.116518 -0.170501 -0.277350 -0.043786  \n",
+      "5       0.067791 -0.364156  0.244321  0.231080 -0.020546  0.384111  0.040582  \n",
+      "\n",
+      "[5 rows x 610 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "user_item_matrix = ratings.pivot(index='userId', columns='movieId', values='rating')\n",
+    "\n",
+    "centered_user_item_matrix = user_item_matrix.sub(user_item_matrix.mean(axis=1), axis=0)\n",
+    "\n",
+    "def pearson(user1, user2):\n",
+    "    common_ratings = ~user1.isna() & ~user2.isna()\n",
+    "    user1_common = user1[common_ratings]\n",
+    "    user2_common = user2[common_ratings]\n",
+    "    \n",
+    "    if len(user1_common) == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    numerator = np.sum((user1_common - user1_common.mean()) * (user2_common - user2_common.mean()))\n",
+    "    denominator = np.sqrt(np.sum((user1_common - user1_common.mean()) ** 2) * np.sum((user2_common - user2_common.mean()) ** 2))\n",
+    "    \n",
+    "    if denominator == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    return numerator / denominator\n",
+    "\n",
+    "user_similarity_matrix = pd.DataFrame(index=user_item_matrix.index, columns=user_item_matrix.index)\n",
+    "\n",
+    "#Tulee testiks näitä vertailu dataframeja miten samanlaisia kaikki käyttäjät on keskenään\n",
+    "for user_a in user_item_matrix.index:\n",
+    "    for user_b in user_item_matrix.index:\n",
+    "        if user_a == user_b:\n",
+    "            user_similarity_matrix.loc[user_a, user_b] = 1  \n",
+    "        elif pd.isna(user_similarity_matrix.loc[user_a, user_b]):\n",
+    "            similarity = pearson(centered_user_item_matrix.loc[user_a], centered_user_item_matrix.loc[user_b])\n",
+    "            user_similarity_matrix.loc[user_a, user_b] = similarity\n",
+    "            user_similarity_matrix.loc[user_b, user_a] = similarity\n",
+    "\n",
+    "user_similarity_matrix = user_similarity_matrix.astype(float)\n",
+    "\n",
+    "print(user_similarity_matrix.head())\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "(c) the prediction function presented in class for predicting movies scores (4 points)."
    ]
   },
   {
