--- a/projetpartone.ipynb
+++ b/projetpartone.ipynb
@@ -493,6 +493,40 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def predict_rating(user_id, movie_id, n_neighbors=5):\n",
+    "    user_ratings = user_item_matrix.loc[user_id]\n",
+    "    user_mean_rating = user_ratings.mean()\n",
+    "    similarities = user_item_matrix[user_id].sort_values(ascending=False)\n",
+    "    neighbors = similarities.iloc[1:n_neighbors+1].index\n",
+    "    num = 0\n",
+    "    den = 0\n",
+    "    for n in neighbors:\n",
+    "        neighbor_ratings = user_item_matrix.loc[n]\n",
+    "        if pd.notna(neighbor_ratings[movie_id]):\n",
+    "            neighbor_mean_rating = neighbor_ratings.mean()\n",
+    "            similarity = similarities[n]\n",
+    "            rating_diff = neighbor_ratings[movie_id] - neighbor_mean_rating\n",
+    "            num += similarity * rating_diff\n",
+    "            den += abs(similarity)\n",
+    "    if den == 0:\n",
+    "        return user_mean_rating\n",
+    "    \n",
+    "    predicted_rating = user_mean_rating + (num / den)\n",
+    "    return predicted_rating\n",
+    "\n",
+    "#Testiprintti\n",
+    "user_id = 1\n",
+    "movie_id = 47\n",
+    "predicted_rating = predict_rating(user_id, movie_id)\n",
+    "print(f\"Predicted rating for User {user_id} on Movie {movie_id}: {predicted_rating}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
