--- a/projetpartone.ipynb
+++ b/projetpartone.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -544,6 +544,93 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "userId       1    2         3         4         5         6         7    \\\n",
+      "userId                                                                    \n",
+      "1       1.000000  0.0  0.079819  0.207983  0.268749 -0.291636 -0.118773   \n",
+      "2       0.000000  1.0  0.000000  0.000000  0.000000  0.000000 -0.991241   \n",
+      "3       0.079819  0.0  1.000000  0.000000  0.000000  0.000000  0.000000   \n",
+      "4       0.207983  0.0  0.000000  1.000000 -0.336525  0.148498  0.542861   \n",
+      "5       0.268749  0.0  0.000000 -0.336525  1.000000  0.043166  0.158114   \n",
+      "\n",
+      "userId       8         9         10   ...       601       602       603  \\\n",
+      "userId                                ...                                 \n",
+      "1       0.469668  0.918559 -0.037987  ...  0.091574  0.000000 -0.061503   \n",
+      "2       0.000000  0.000000  0.037796  ... -0.387347  0.000000 -1.000000   \n",
+      "3       0.000000  0.000000  0.000000  ...  0.000000  0.000000  0.433200   \n",
+      "4       0.117851  0.000000  0.485794  ... -0.222113  0.396641  0.090090   \n",
+      "5       0.028347  0.000000 -0.777714  ...  0.000000  0.153303  0.234743   \n",
+      "\n",
+      "userId       604       605       606       607       608       609       610  \n",
+      "userId                                                                        \n",
+      "1      -0.407556 -0.164871  0.066378  0.174557  0.268070 -0.175412 -0.032086  \n",
+      "2       0.000000  0.000000  0.583333  0.000000 -0.125000  0.000000  0.623288  \n",
+      "3       0.000000  0.000000 -0.791334 -0.333333 -0.395092  0.000000  0.569562  \n",
+      "4      -0.080296  0.400124  0.144603  0.116518 -0.170501 -0.277350 -0.043786  \n",
+      "5       0.067791 -0.364156  0.244321  0.231080 -0.020546  0.384111  0.040582  \n",
+      "\n",
+      "[5 rows x 610 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_item_matrix = ratings.pivot(index='userId', columns='movieId', values='rating')\n",
+    "\n",
+    "# Calculated Adjusted Cosine Similarity\n",
+    "def adjusted_cosine_similarity(user1, user2):\n",
+    "    # Identify movies that both users have rated\n",
+    "    common_items = ~user1.isna() & ~user2.isna()\n",
+    "    user1_common = user1[common_items]\n",
+    "    user2_common = user2[common_items]\n",
+    "    \n",
+    "    # If no common ratings, return 0 (no similarity)\n",
+    "    if len(user1_common) == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    user1_mean = user1_common.mean()\n",
+    "    user2_mean = user2_common.mean()\n",
+    "    \n",
+    "    user1_adj = user1_common - user1_mean\n",
+    "    user2_adj = user2_common - user2_mean\n",
+    "    # Calculate the dot product of the two users' ratings\n",
+    "    # Calculate the denominator by taking the product of each user's rating vector magnitudes\n",
+    "    numerator = np.dot(user1_adj, user2_adj)\n",
+    "    denominator = np.sqrt(np.sum(user1_adj ** 2)) * np.sqrt(np.sum(user2_adj ** 2))\n",
+    "    \n",
+    "    # Return 0 if the denominator is zero (to avoid division by zero), otherwise return cosine similarity\n",
+    "    if denominator == 0:\n",
+    "        return 0\n",
+    "\n",
+    "    return numerator / denominator\n",
+    "\n",
+    "# Initialize an empty matrix to store user-user similarity scores\n",
+    "user_similarity_matrix_adjusted_cosine = pd.DataFrame(index=user_item_matrix.index, columns=user_item_matrix.index)\n",
+    "\n",
+    "# Populate the user similarity matrix using cosine similarity\n",
+    "for user_a in user_item_matrix.index:\n",
+    "    for user_b in user_item_matrix.index:\n",
+    "        if user_a == user_b:\n",
+    "            user_similarity_matrix_adjusted_cosine.loc[user_a, user_b] = 1  \n",
+    "        elif pd.isna(user_similarity_matrix_adjusted_cosine.loc[user_a, user_b]):\n",
+    "            similarity = adjusted_cosine_similarity(user_item_matrix.loc[user_a], user_item_matrix.loc[user_b])\n",
+    "            user_similarity_matrix_adjusted_cosine.loc[user_a, user_b] = similarity\n",
+    "            user_similarity_matrix_adjusted_cosine.loc[user_b, user_a] = similarity\n",
+    "\n",
+    "user_similarity_matrix_adjusted_cosine = user_similarity_matrix_adjusted_cosine.astype(float)\n",
+    "\n",
+    "print(user_similarity_matrix_adjusted_cosine.head())\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -575,7 +662,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "recsys",
+   "display_name": "bbthti",
    "language": "python",
    "name": "python3"
   },
@@ -589,7 +676,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.20"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
