Added explanation in (d).

--- a/projetpartone.ipynb
+++ b/projetpartone.ipynb
@@ -634,6 +634,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Cosine similarity is a useful measure of user similarity in collaborative filtering systems because it focuses on the direction of user ratings rather than their absolute values. This means that it can identify users with similar tastes regardless of how high or low their ratings tend to be. In addition, cosine similarity works well on sparse datasets (e.g. when users have not rated the same items) and is computationally lightweight, so it scales to large user and product datasets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "(e) Use the user-based collaborative filtering approach to produce group\n",
     "recommendations. Specifically, first compute the movies recommendations for each\n",
     "user in the group, and then aggregate the lists of the individual users, to produce a\n",
@@ -649,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -695,8 +702,6 @@
     "\n",
     "# Create the pivot table, filling in missing ratings with 0 or NaN as needed\n",
     "movies_ratings_pivot = pd.pivot_table(movies_ratings_df, index='userId', columns='title', values='rating', fill_value=0)\n",
-    "\n",
-    "\n",
     "\n",
     "# Function to get individual user recommendations based on the similarity matrix\n",
     "def get_user_recommendations(user_id, top_n=10):\n",
@@ -748,13 +753,6 @@
     "group recommendations. Prepare also a short presentation (about 5 slides) to show\n",
     "how your method works. 6 points"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
