--- a/projetpartone.ipynb
+++ b/projetpartone.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -753,11 +753,128 @@
     "group recommendations. Prepare also a short presentation (about 5 slides) to show\n",
     "how your method works. 6 points"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>average_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Monty Python and the Holy Grail (1975)</td>\n",
+       "      <td>1136</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Princess Bride, The (1987)</td>\n",
+       "      <td>1197</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Pinocchio (1940)</td>\n",
+       "      <td>596</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Monty Python's Life of Brian (1979)</td>\n",
+       "      <td>1080</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Jungle Book, The (1967)</td>\n",
+       "      <td>2078</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    title  movieId  average_rating\n",
+       "0  Monty Python and the Holy Grail (1975)     1136             5.0\n",
+       "1              Princess Bride, The (1987)     1197             5.0\n",
+       "2                        Pinocchio (1940)      596             5.0\n",
+       "3     Monty Python's Life of Brian (1979)     1080             5.0\n",
+       "4                 Jungle Book, The (1967)     2078             5.0"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "user_item_matrix = ratings.pivot(index='userId', columns='movieId', values='rating')\n",
+    "\n",
+    "#Calcuating disagreement (standard deviation among group ratings for a movie)\n",
+    "def calculate_disagreements(group_user_ids):\n",
+    "    group_ratings = user_item_matrix.loc[group_user_ids]\n",
+    "    disagreements = group_ratings.std(axis=0, skipna=True)\n",
+    "    return disagreements\n",
+    "\n",
+    "#Group recommendation considering disagreements\n",
+    "def group_recommendations_with_titles(group_user_ids, disagreement_threshold=1.0):\n",
+    "    disagreements = calculate_disagreements(group_user_ids)\n",
+    "\n",
+    "    #Filtering movies with disagreements below threshold (high agreement)\n",
+    "    agreed_movies = disagreements[disagreements <= disagreement_threshold].index\n",
+    "\n",
+    "\n",
+    "    #Calculating avarage rating among group members for agreed movies\n",
+    "    group_ratings = user_item_matrix.loc[group_user_ids, agreed_movies]\n",
+    "    average_ratings = group_ratings.mean(axis=0, skipna=True)\n",
+    "\n",
+    "\n",
+    "    recommendations = pd.DataFrame({'movieId': average_ratings.index, 'average_rating': average_ratings.values})\n",
+    "    recommendations = recommendations.merge(movies[['movieId', 'title']], on='movieId', how='left')\n",
+    "    recommendations = recommendations.sort_values(by='average_rating', ascending=False).reset_index(drop=True)\n",
+    "    recommendations = recommendations[['title', 'movieId', 'average_rating']]\n",
+    "\n",
+    "    return recommendations\n",
+    "\n",
+    "\n",
+    "#Example group\n",
+    "example_group_user_ids = user_item_matrix.index[:5]  \n",
+    "recommendations_with_titles = group_recommendations_with_titles(example_group_user_ids)\n",
+    "recommendations_with_titles.head()\n"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bbthti",
+   "display_name": "recsys",
    "language": "python",
    "name": "python3"
   },
@@ -771,7 +888,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
