--- a/projetpartone.ipynb
+++ b/projetpartone.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -756,119 +756,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>title</th>\n",
-       "      <th>movieId</th>\n",
-       "      <th>average_rating</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Monty Python and the Holy Grail (1975)</td>\n",
-       "      <td>1136</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Princess Bride, The (1987)</td>\n",
-       "      <td>1197</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Pinocchio (1940)</td>\n",
-       "      <td>596</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Monty Python's Life of Brian (1979)</td>\n",
-       "      <td>1080</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Jungle Book, The (1967)</td>\n",
-       "      <td>2078</td>\n",
-       "      <td>5.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                    title  movieId  average_rating\n",
-       "0  Monty Python and the Holy Grail (1975)     1136             5.0\n",
-       "1              Princess Bride, The (1987)     1197             5.0\n",
-       "2                        Pinocchio (1940)      596             5.0\n",
-       "3     Monty Python's Life of Brian (1979)     1080             5.0\n",
-       "4                 Jungle Book, The (1967)     2078             5.0"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Formed Group User IDs: [1, 146, 550, 106, 333, 598]\n",
+      "Group Recommendations:\n",
+      "                                          title  movieId  average_rating\n",
+      "0                              Inception (2010)    79132        5.000000\n",
+      "1                            Matrix, The (1999)     2571        4.833333\n",
+      "2              Shawshank Redemption, The (1994)      318        4.750000\n",
+      "3                              Gladiator (2000)     3578        4.500000\n",
+      "4                              Toy Story (1995)        1        4.000000\n",
+      "5                           Forrest Gump (1994)      356        4.000000\n",
+      "6                                   Thor (2011)    86332        4.000000\n",
+      "7                Guardians of the Galaxy (2014)   112852        4.000000\n",
+      "8  I Still Know What You Did Last Summer (1998)     2338        2.000000\n"
+     ]
     }
    ],
    "source": [
+    "def form_group(user_id, group_size=5, similarity_matrix='adjusted_cosine'):\n",
+    "    user_similarities = user_similarity_matrix_adjusted_cosine.loc[user_id].drop(index=user_id)\n",
+    "    similar_users = user_similarities.nlargest(group_size).index\n",
+    "    group_user_ids = [user_id] + list(similar_users) \n",
+    "    \n",
+    "    return group_user_ids\n",
     "\n",
-    "user_item_matrix = ratings.pivot(index='userId', columns='movieId', values='rating')\n",
     "\n",
-    "#Calcuating disagreement (standard deviation among group ratings for a movie)\n",
     "def calculate_disagreements(group_user_ids):\n",
     "    group_ratings = user_item_matrix.loc[group_user_ids]\n",
     "    disagreements = group_ratings.std(axis=0, skipna=True)\n",
     "    return disagreements\n",
     "\n",
-    "#Group recommendation considering disagreements\n",
+    "\n",
     "def group_recommendations_with_titles(group_user_ids, disagreement_threshold=1.0):\n",
     "    disagreements = calculate_disagreements(group_user_ids)\n",
-    "\n",
-    "    #Filtering movies with disagreements below threshold (high agreement)\n",
     "    agreed_movies = disagreements[disagreements <= disagreement_threshold].index\n",
-    "\n",
-    "\n",
-    "    #Calculating avarage rating among group members for agreed movies\n",
     "    group_ratings = user_item_matrix.loc[group_user_ids, agreed_movies]\n",
     "    average_ratings = group_ratings.mean(axis=0, skipna=True)\n",
-    "\n",
-    "\n",
     "    recommendations = pd.DataFrame({'movieId': average_ratings.index, 'average_rating': average_ratings.values})\n",
     "    recommendations = recommendations.merge(movies[['movieId', 'title']], on='movieId', how='left')\n",
     "    recommendations = recommendations.sort_values(by='average_rating', ascending=False).reset_index(drop=True)\n",
     "    recommendations = recommendations[['title', 'movieId', 'average_rating']]\n",
-    "\n",
+    "    \n",
     "    return recommendations\n",
     "\n",
     "\n",
-    "#Example group\n",
-    "example_group_user_ids = user_item_matrix.index[:5]  \n",
-    "recommendations_with_titles = group_recommendations_with_titles(example_group_user_ids)\n",
-    "recommendations_with_titles.head()\n"
+    "\n",
+    "\n",
+    "#Forms a group around a target user, e.g., user ID 1, using adjusted cosine\n",
+    "group_user_ids = form_group(user_id=1, group_size=5, similarity_matrix='adjusted_cosine')\n",
+    "print(\"Formed Group User IDs:\", group_user_ids)\n",
+    "\n",
+    "#Generates recommendations for the group, considering disagreement\n",
+    "recommendations_with_titles = group_recommendations_with_titles(group_user_ids, disagreement_threshold=1.0)\n",
+    "print(\"Group Recommendations:\")\n",
+    "print(recommendations_with_titles.head(10))\n"
    ]
   }
  ],
