--- a/projetpartone.ipynb
+++ b/projetpartone.ipynb
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +780,14 @@
    ],
    "source": [
     "def form_group(user_id, group_size=5, similarity_matrix='adjusted_cosine'):\n",
-    "    user_similarities = user_similarity_matrix_adjusted_cosine.loc[user_id].drop(index=user_id)\n",
+    "    if similarity_matrix == 'pearson':\n",
+    "        user_similarities = user_similarity_matrix.loc[user_id].drop(index=user_id)\n",
+    "    elif similarity_matrix == 'adjusted_cosine':\n",
+    "        user_similarities = user_similarity_matrix_adjusted_cosine.loc[user_id].drop(index=user_id)\n",
+    "    else:\n",
+    "        raise ValueError(\"Invalid similarity_matrix parameter. Use 'pearson' or 'adjusted_cosine'.\")\n",
+    "\n",
+    "    #user_similarities = user_similarity_matrix_adjusted_cosine.loc[user_id].drop(index=user_id)\n",
     "    similar_users = user_similarities.nlargest(group_size).index\n",
     "    group_user_ids = [user_id] + list(similar_users) \n",
     "    \n",
@@ -793,7 +800,7 @@
     "    return disagreements\n",
     "\n",
     "\n",
-    "def group_recommendations_with_titles(group_user_ids, disagreement_threshold=1.0):\n",
+    "def group_recommendations(group_user_ids, disagreement_threshold=1.0):\n",
     "    disagreements = calculate_disagreements(group_user_ids)\n",
     "    agreed_movies = disagreements[disagreements <= disagreement_threshold].index\n",
     "    group_ratings = user_item_matrix.loc[group_user_ids, agreed_movies]\n",
@@ -806,16 +813,14 @@
     "    return recommendations\n",
     "\n",
     "\n",
-    "\n",
-    "\n",
-    "#Forms a group around a target user, e.g., user ID 1, using adjusted cosine\n",
+    "#Forms a group around a target user, e.g., user ID 1, using adjusted cosine or pearson\n",
     "group_user_ids = form_group(user_id=1, group_size=5, similarity_matrix='adjusted_cosine')\n",
     "print(\"Formed Group User IDs:\", group_user_ids)\n",
     "\n",
     "#Generates recommendations for the group, considering disagreement\n",
-    "recommendations_with_titles = group_recommendations_with_titles(group_user_ids, disagreement_threshold=1.0)\n",
+    "recommendations = group_recommendations(group_user_ids, disagreement_threshold=1.0)\n",
     "print(\"Group Recommendations:\")\n",
-    "print(recommendations_with_titles.head(10))\n"
+    "print(recommendations.head(10))\n"
    ]
   }
  ],
