Removing finnish comments

--- a/projetpartone.ipynb
+++ b/projetpartone.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
     "\n",
     "user_similarity_matrix = pd.DataFrame(index=user_item_matrix.index, columns=user_item_matrix.index)\n",
     "\n",
-    "#Tulee testiks näitä vertailu dataframeja miten samanlaisia kaikki käyttäjät on keskenään\n",
+    "#Dataframes for user matrixes\n",
     "for user_a in user_item_matrix.index:\n",
     "    for user_b in user_item_matrix.index:\n",
     "        if user_a == user_b:\n",
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -527,7 +527,7 @@
     "    predicted_rating = user_mean_rating + (num / den)\n",
     "    return predicted_rating\n",
     "\n",
-    "#Testiprintti\n",
+    "#Parameters to get the predicted rating for a user\n",
     "user_id = 1\n",
     "movie_id = 47\n",
     "predicted_rating = predict_rating(user_id, movie_id)\n",
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -715,8 +715,8 @@
     "    return weighted_ratings.nlargest(top_n)\n",
     "\n",
     "# Example users in a group\n",
-    "# Valitaan lähtökohtana oleva käyttäjä\n",
-    "selected_user = 1  # Vaihda tämä ID haluamaksesi käyttäjäksi\n",
+    "# Choosing the target user\n",
+    "selected_user = 1  \n",
     "\n",
     "# Look for the similar user and make group of ten\n",
     "similar_users = user_similarity_matrix.loc[selected_user].sort_values(ascending=False).iloc[1:11].index\n",
@@ -787,7 +787,6 @@
     "    else:\n",
     "        raise ValueError(\"Invalid similarity_matrix parameter. Use 'pearson' or 'adjusted_cosine'.\")\n",
     "\n",
-    "    #user_similarities = user_similarity_matrix_adjusted_cosine.loc[user_id].drop(index=user_id)\n",
     "    similar_users = user_similarities.nlargest(group_size).index\n",
     "    group_user_ids = [user_id] + list(similar_users) \n",
     "    \n",
