--- a/projectparttwo.ipynb
+++ b/projectparttwo.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -406,6 +406,141 @@
     "\n",
     "rating_count = ratings.shape[0]\n",
     "print(f\"\\nTotal number of ratings: {rating_count}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tässä vasta pohdintaan, vaihdetaan näitä sitten englanniksi jos päädytään tähän ratkaisuun. \n",
+    "\n",
+    "Valitsemme yksinkertaisen Markovin ketjuihin perustuvan menetelmän, joka ottaa huomioon ryhmän katseluhistorian ja soveltaa sitä sekventiaalisiin suosituksiin. Lisäksi yhdistämme siihen ryhmäkohtaista aggregointia, joka mukautuu ryhmän mieltymysten mukaan.\n",
+    "\n",
+    "Menetelmän ydin:\n",
+    "Siirtymätodennäköisyydet:\n",
+    "\n",
+    "Lasketaan siirtymätodennäköisyydet genrejen välillä käyttäen käyttäjäkohtaisia katseluhistorioita. Näitä siirtymiä käytetään ennustamaan seuraavia genrejä.\n",
+    "Ryhmäaggregointi:\n",
+    "\n",
+    "Käytetään keskiarvomenetelmää: Yhdistetään yksittäisten käyttäjien suositukset keskiarvoistamalla genren siirtymätodennäköisyydet.\n",
+    "Käytetään myös vähimmän tyytyväisyyden menetelmää (least misery): Suositellaan vain genrejä, jotka kaikki ryhmän jäsenet hyväksyisivät. Tämä toimii kompromissiratkaisuna.\n",
+    "Sekventiaalisuuden huomioiminen:\n",
+    "\n",
+    "Käytetään viimeisintä katsottua genreä tai viimeisimpiä genrejä ennustamaan ryhmän seuraavaa valintaa. Näin menetelmä mukautuu ajan mukana ryhmän tottumuksiin.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   userId  movieId  rating  timestamp primary_genre\n",
+      "0       1        1     4.0  964982703     Adventure\n",
+      "1       1        3     4.0  964981247        Comedy\n",
+      "2       1        6     4.0  964982224        Action\n",
+      "3       1       47     5.0  964983815       Mystery\n",
+      "4       1       50     5.0  964982931         Crime\n",
+      "Transition probabilities:\n",
+      "Action: {'Comedy': 0.18136772330511255, 'Action': 0.4380127321651244, 'Drama': 0.13057032224191115, 'Children': 0.014930760648421606, 'Adventure': 0.10645140119446085, 'Horror': 0.02077180547351841, 'Thriller': 0.0064645271378880355, 'Animation': 0.019360766555096148, 'Crime': 0.055522740696987594, 'Documentary': 0.00534882194657741, 'Sci-Fi': 0.0038721533110192296, 'Western': 0.0010500754741747064, 'Mystery': 0.010467939883179104, 'Film-Noir': 0.000459408019951434, 'Musical': 0.0009844457570387872, 'Romance': 0.0008531863227669488, '(no genres listed)': 0.0004265931613834744, 'War': 0.00016407429283979785, 'Fantasy': 0.0029205224125484017}\n",
+      "Comedy: {'Animation': 0.02112900653803221, 'Action': 0.22029979269653963, 'Comedy': 0.3850661776431191, 'Adventure': 0.08296125019933025, 'Crime': 0.05278265029500877, 'Drama': 0.15950406633710731, 'Horror': 0.02045128368681231, 'Documentary': 0.009209057566576303, 'Fantasy': 0.0028304895550948814, 'Film-Noir': 0.0009567852017222134, 'Mystery': 0.007454951363418913, 'Thriller': 0.004783926008611067, 'Children': 0.024956147344921065, 'Western': 0.0017541062031573912, 'Sci-Fi': 0.0024716951044490513, 'Musical': 0.0015547759527985967, 'Romance': 0.001395311752511561, '(no genres listed)': 0.00035879445064583, 'War': 7.973210014351777e-05}\n",
+      "Animation: {'Action': 0.24407582938388625, 'Comedy': 0.2033965244865719, 'Adventure': 0.17812006319115323, 'Animation': 0.1141390205371248, 'Drama': 0.12993680884676145, 'Children': 0.04225908372827804, 'Thriller': 0.004739336492890996, 'Crime': 0.044233807266982623, 'Horror': 0.014612954186413903, 'Documentary': 0.009873617693522907, 'Mystery': 0.005134281200631911, '(no genres listed)': 0.0007898894154818325, 'Fantasy': 0.001579778830963665, 'Musical': 0.002369668246445498, 'Sci-Fi': 0.002764612954186414, 'Western': 0.0007898894154818325, 'Romance': 0.001184834123222749}\n",
+      "Drama: {'Adventure': 0.08412042502951594, 'Comedy': 0.2346517119244392, 'Action': 0.23246753246753246, 'Horror': 0.022255017709563164, 'Drama': 0.2606847697756789, 'Animation': 0.02036599763872491, 'Documentary': 0.010920897284533649, 'Mystery': 0.011511216056670602, 'Crime': 0.08447461629279811, 'Thriller': 0.006552538370720189, 'Children': 0.017001180637544275, 'Fantasy': 0.003896103896103896, 'Western': 0.0021841794569067295, 'Romance': 0.001652892561983471, 'Film-Noir': 0.0014167650531286896, 'Sci-Fi': 0.0035419126328217238, 'Musical': 0.0017709563164108619, '(no genres listed)': 0.0005312868949232586}\n",
+      "Adventure: {'Comedy': 0.21704898911353032, 'Action': 0.30705676516329705, 'Adventure': 0.17291990668740279, 'Animation': 0.04364307931570762, 'Crime': 0.049183514774494556, 'Horror': 0.017301710730948678, 'Drama': 0.1368584758942457, 'Documentary': 0.006804043545878694, 'Fantasy': 0.00291601866251944, 'Thriller': 0.005734836702954899, 'Children': 0.024202954898911354, 'Mystery': 0.008650855365474339, 'Sci-Fi': 0.00291601866251944, 'Film-Noir': 0.000874805598755832, 'Western': 0.0011664074650077762, '(no genres listed)': 0.0006804043545878694, 'Musical': 0.0012636080870917575, 'Romance': 0.0007776049766718507}\n",
+      "Children: {'Children': 0.0798076923076923, 'Comedy': 0.2985576923076923, 'Adventure': 0.12548076923076923, 'Action': 0.22740384615384615, 'Drama': 0.1375, 'Crime': 0.038461538461538464, 'Horror': 0.01875, 'Animation': 0.04423076923076923, 'Sci-Fi': 0.0009615384615384616, 'Fantasy': 0.004326923076923077, 'Thriller': 0.004326923076923077, 'Mystery': 0.008173076923076924, 'Musical': 0.002403846153846154, 'Documentary': 0.004807692307692308, 'Romance': 0.0019230769230769232, 'Western': 0.0019230769230769232, '(no genres listed)': 0.0004807692307692308, 'Film-Noir': 0.0004807692307692308}\n",
+      "Horror: {'Action': 0.26136829168373615, 'Crime': 0.05571487095452683, 'Comedy': 0.20442441622285948, 'Thriller': 0.010241704219582138, 'Western': 0.0008193363375665711, 'Drama': 0.15034821794346578, 'Adventure': 0.06595657517410897, 'Horror': 0.17083162638263008, 'Children': 0.024580090126997134, 'Mystery': 0.006964358869315854, 'Fantasy': 0.00819336337566571, 'Animation': 0.018844735764031135, 'Romance': 0.0024580090126997134, 'Sci-Fi': 0.0061450225317492835, 'Documentary': 0.010241704219582138, 'Film-Noir': 0.0012290045063498567, '(no genres listed)': 0.0012290045063498567, 'War': 0.00040966816878328555}\n",
+      "Thriller: {'Action': 0.2841091492776886, 'Thriller': 0.01765650080256822, 'Comedy': 0.1926163723916533, 'Adventure': 0.0738362760834671, 'Crime': 0.12359550561797752, 'Drama': 0.17495987158908508, 'Children': 0.02247191011235955, 'Sci-Fi': 0.009630818619582664, 'Horror': 0.048154093097913325, 'Animation': 0.024077046548956663, 'Western': 0.0032102728731942215, 'Romance': 0.004815409309791332, 'Documentary': 0.009630818619582664, 'Musical': 0.0016051364365971107, 'Fantasy': 0.004815409309791332, 'Mystery': 0.004815409309791332}\n",
+      "Crime: {'Comedy': 0.19777710109622412, 'Crime': 0.13885505481120586, 'Action': 0.267204628501827, 'Horror': 0.020858708891595613, 'Drama': 0.22168087697929353, 'Mystery': 0.014616321559074299, 'Adventure': 0.07962850182704019, 'Children': 0.008982947624847746, 'Thriller': 0.008678440925700366, 'Fantasy': 0.0013702801461632156, 'Animation': 0.01750913520097442, 'Film-Noir': 0.004110840438489647, 'Documentary': 0.012637028014616322, 'Western': 0.001218026796589525, 'Romance': 0.0010657734470158344, 'Sci-Fi': 0.0030450669914738123, 'Musical': 0.0006090133982947625, '(no genres listed)': 0.0001522533495736906}\n",
+      "Mystery: {'Action': 0.29656607700312176, 'Crime': 0.10822060353798127, 'Drama': 0.2133194588969823, 'Mystery': 0.011446409989594173, 'Adventure': 0.09573361082206035, 'Comedy': 0.18314255983350677, 'Children': 0.021852237252861603, 'Horror': 0.021852237252861603, 'Sci-Fi': 0.007284079084287201, 'Thriller': 0.005202913631633715, 'Animation': 0.013527575442247659, 'Documentary': 0.008324661810613945, 'Western': 0.002081165452653486, 'Romance': 0.002081165452653486, 'Fantasy': 0.006243496357960458, 'Film-Noir': 0.002081165452653486, 'War': 0.001040582726326743}\n",
+      "Documentary: {'Drama': 0.21251241310824232, 'Adventure': 0.0506454816285998, 'Action': 0.17378351539225423, 'Crime': 0.07745779543197617, 'Comedy': 0.21449851042701093, 'Documentary': 0.18867924528301888, 'Mystery': 0.013902681231380337, 'Horror': 0.01787487586891758, 'Animation': 0.021847070506454815, 'Western': 0.0019860973187686196, 'Children': 0.00893743793445879, '(no genres listed)': 0.0019860973187686196, 'Fantasy': 0.0009930486593843098, 'Thriller': 0.006951340615690168, 'Musical': 0.0029791459781529296, 'Film-Noir': 0.0019860973187686196, 'Sci-Fi': 0.0009930486593843098, 'Romance': 0.0019860973187686196}\n",
+      "Sci-Fi: {'Action': 0.3558823529411765, 'Adventure': 0.11176470588235295, 'Crime': 0.047058823529411764, 'Drama': 0.1676470588235294, 'Film-Noir': 0.0029411764705882353, 'Thriller': 0.014705882352941176, 'Comedy': 0.18823529411764706, 'Horror': 0.052941176470588235, 'Sci-Fi': 0.01764705882352941, 'Animation': 0.008823529411764706, 'Mystery': 0.011764705882352941, 'Children': 0.011764705882352941, 'Fantasy': 0.0029411764705882353, 'Documentary': 0.0058823529411764705}\n",
+      "Fantasy: {'Sci-Fi': 0.01592356687898089, 'Action': 0.3057324840764331, 'Comedy': 0.18152866242038215, 'Adventure': 0.12101910828025478, 'Drama': 0.16560509554140126, 'Horror': 0.08917197452229299, 'Animation': 0.028662420382165606, 'Crime': 0.04777070063694268, 'Fantasy': 0.012738853503184714, 'Children': 0.01592356687898089, 'Documentary': 0.009554140127388535, 'Mystery': 0.0031847133757961785, 'Thriller': 0.0031847133757961785}\n",
+      "Western: {'Comedy': 0.1986754966887417, 'Drama': 0.25165562913907286, 'Action': 0.26490066225165565, 'Thriller': 0.019867549668874173, 'Sci-Fi': 0.006622516556291391, 'Horror': 0.019867549668874173, 'Adventure': 0.11920529801324503, 'Western': 0.026490066225165563, 'Children': 0.026490066225165563, 'Crime': 0.033112582781456956, 'Animation': 0.013245033112582781, 'Mystery': 0.006622516556291391, 'Documentary': 0.013245033112582781}\n",
+      "Film-Noir: {'Action': 0.15454545454545454, 'Crime': 0.23636363636363636, 'Drama': 0.17272727272727273, 'Mystery': 0.02727272727272727, 'Horror': 0.02727272727272727, 'Sci-Fi': 0.00909090909090909, 'Adventure': 0.11818181818181818, 'Animation': 0.045454545454545456, 'Comedy': 0.12727272727272726, 'Children': 0.01818181818181818, 'Thriller': 0.01818181818181818, 'Documentary': 0.02727272727272727, 'Film-Noir': 0.01818181818181818}\n",
+      "Musical: {'Adventure': 0.12781954887218044, 'Drama': 0.20300751879699247, 'Comedy': 0.2857142857142857, 'Action': 0.15789473684210525, 'Crime': 0.03759398496240601, 'Animation': 0.05263157894736842, 'Children': 0.05263157894736842, 'Horror': 0.015037593984962405, 'Musical': 0.015037593984962405, 'Fantasy': 0.007518796992481203, 'Documentary': 0.03007518796992481, 'Mystery': 0.015037593984962405}\n",
+      "Romance: {'Adventure': 0.0967741935483871, 'Drama': 0.23387096774193547, 'Comedy': 0.28225806451612906, 'Action': 0.1935483870967742, 'Children': 0.056451612903225805, 'Mystery': 0.008064516129032258, 'Animation': 0.024193548387096774, 'Horror': 0.016129032258064516, 'Crime': 0.06451612903225806, 'Thriller': 0.008064516129032258, 'Documentary': 0.008064516129032258, 'Romance': 0.008064516129032258}\n",
+      "(no genres listed): {'Action': 0.3191489361702128, 'Crime': 0.10638297872340426, 'Mystery': 0.02127659574468085, 'Adventure': 0.10638297872340426, 'Animation': 0.10638297872340426, 'Comedy': 0.1276595744680851, 'Horror': 0.02127659574468085, 'Documentary': 0.0425531914893617, 'Sci-Fi': 0.02127659574468085, 'Children': 0.02127659574468085, 'Musical': 0.02127659574468085, 'Thriller': 0.02127659574468085, 'Drama': 0.06382978723404255}\n",
+      "War: {'Drama': 0.4444444444444444, 'Action': 0.1111111111111111, 'Comedy': 0.1111111111111111, 'Children': 0.1111111111111111, 'Thriller': 0.1111111111111111, 'Adventure': 0.1111111111111111}\n",
+      "Next recommended genre after Comedy: Crime\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "\n",
+    "# Erotellaan genre ensimmäisenä olevaksi genrekentäksi (jos genret eroteltu \"|\"-merkeillä)\n",
+    "movies['primary_genre'] = movies['genres'].apply(lambda x: x.split('|')[0] if isinstance(x, str) else None)\n",
+    "\n",
+    "# Yhdistetään datasetit movieId:n perusteella\n",
+    "data = pd.merge(ratings, movies[['movieId', 'primary_genre']], on='movieId')\n",
+    "\n",
+    "# Tarkastetaan yhdistetty data\n",
+    "print(data.head())\n",
+    "\n",
+    "# Nyt jokaisella rivillä on userId, movieId, rating, timestamp ja primary_genre\n",
+    "\n",
+    "# Lasketaan genre-siirtymät käyttäjäkohtaisesti\n",
+    "transition_counts = defaultdict(lambda: defaultdict(int))\n",
+    "\n",
+    "# Käydään läpi käyttäjäkohtaiset genret aikajärjestyksessä\n",
+    "users = data['userId'].unique()\n",
+    "for user in users:\n",
+    "    user_data = data[data['userId'] == user].sort_values(by=\"timestamp\")\n",
+    "    genres = user_data['primary_genre'].tolist()\n",
+    "    for i in range(len(genres) - 1):\n",
+    "        current_genre = genres[i]\n",
+    "        next_genre = genres[i + 1]\n",
+    "        transition_counts[current_genre][next_genre] += 1\n",
+    "\n",
+    "# Muutetaan siirtymätodennäköisyyksiksi\n",
+    "transition_probabilities = {}\n",
+    "for genre, transitions in transition_counts.items():\n",
+    "    total_transitions = sum(transitions.values())\n",
+    "    transition_probabilities[genre] = {next_genre: count / total_transitions for next_genre, count in transitions.items()}\n",
+    "\n",
+    "# Tulostetaan siirtymätodennäköisyydet\n",
+    "print(\"Transition probabilities:\")\n",
+    "for genre, probs in transition_probabilities.items():\n",
+    "    print(f\"{genre}: {probs}\")\n",
+    "\n",
+    "# Suositustoiminto: suosittele seuraava genre\n",
+    "def recommend_next_genre(current_genre):\n",
+    "    next_genre_probs = transition_probabilities.get(current_genre, {})\n",
+    "    if not next_genre_probs:\n",
+    "        return np.random.choice(list(transition_probabilities.keys()))  # Palauta satunnainen genre, jos ei ole siirtymätietoa\n",
+    "    genres = list(next_genre_probs.keys())\n",
+    "    probs = list(next_genre_probs.values())\n",
+    "    return np.random.choice(genres, p=probs)\n",
+    "\n",
+    "# Testataan suositusta\n",
+    "current_genre = \"Comedy\"\n",
+    "next_genre = recommend_next_genre(current_genre)\n",
+    "print(f\"Next recommended genre after {current_genre}: {next_genre}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Miksi tämä menetelmä toimii?\n",
+    "Sekventiaalisuuden huomioiminen:\n",
+    "\n",
+    "Markovin ketjut ottavat suoraan huomioon ryhmän aiemmat valinnat ja niiden väliset siirtymät, mikä tekee suosituksista mukautuvia.\n",
+    "Sekventiaalisuus mahdollistaa ryhmän mieltymysten dynaamisen seuraamisen ajan myötä.\n",
+    "Ryhmäaggregoinnin käyttö:\n",
+    "\n",
+    "Keskiarvomenetelmä varmistaa, että kaikkien ryhmän jäsenten mieltymykset huomioidaan tasapuolisesti.\n",
+    "Vähimmän tyytyväisyyden menetelmä varmistaa, että suositukset eivät jätä yksittäistä ryhmän jäsentä täysin tyytymättömäksi.\n",
+    "Helppo toteuttaa ja laajentaa:\n",
+    "\n",
+    "Markovin ketjut ovat suoraviivaisia ja laskettavissa ilman raskasta laskentaa.\n",
+    "Menetelmää voidaan laajentaa helposti lisäämällä esimerkiksi ajallisia painotuksia, kuten antamalla enemmän merkitystä tuoreimmille valinnoille.\n"
    ]
   },
   {
