Second system idea
satisfaction count to be updated

--- a/projectparttwo.ipynb
+++ b/projectparttwo.ipynb
@@ -21,13 +21,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "import pandas as pd\n",
-    "import numpy as np"
+    "import numpy as np\n",
+    "from collections import defaultdict"
    ]
   },
   {
@@ -409,6 +410,144 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Iteration 1:\n",
+      "User 1 recommendations: [81132, 6902, 71999, 26701, 32031]\n",
+      "User 2 recommendations: [6902, 81132, 32031, 71999, 85261]\n",
+      "User 3 recommendations: [6902, 81132, 32031, 148775, 164226]\n",
+      "User 4 recommendations: [81132, 6902, 71999, 148775, 26701]\n",
+      "User 5 recommendations: [81132, 32031, 81847, 6902, 78637]\n",
+      "Group recommendations: [81132, 6902, 32031, 71999, 26701, 148775, 85261, 164226, 81847, 78637]\n",
+      "Satisfaction scores: {1: 0.5, 2: 0.5, 3: 0.5, 4: 0.5, 5: 0.5}\n",
+      "\n",
+      "Iteration 2:\n",
+      "User 1 recommendations: [164226, 2367, 148775, 56152, 85261]\n",
+      "User 2 recommendations: [148775, 60684, 81847, 2367, 164226]\n",
+      "User 3 recommendations: [71999, 26701, 26590, 117646, 72165]\n",
+      "User 4 recommendations: [2367, 32031, 164226, 79132, 130520]\n",
+      "User 5 recommendations: [98243, 58105, 85261, 71745, 71999]\n",
+      "Group recommendations: [164226, 2367, 148775, 85261, 71999, 56152, 60684, 81847, 26701, 26590, 117646, 72165, 32031, 79132, 130520, 98243, 58105, 71745]\n",
+      "Satisfaction scores: {1: 1.0, 2: 1.0, 3: 1.0, 4: 1.0, 5: 1.0}\n",
+      "\n",
+      "Iteration 3:\n",
+      "User 1 recommendations: [72165, 27683, 79132, 26590, 1907]\n",
+      "User 2 recommendations: [5882, 595, 631, 78499, 56152]\n",
+      "User 3 recommendations: [673, 2617, 36509, 198, 104875]\n",
+      "User 4 recommendations: [116941, 631, 43932, 2092, 8830]\n",
+      "User 5 recommendations: [83349, 56152, 78499, 79132, 30793]\n",
+      "Group recommendations: [79132, 631, 78499, 56152, 72165, 27683, 26590, 1907, 5882, 595, 673, 2617, 36509, 198, 104875, 116941, 43932, 2092, 8830, 83349, 30793]\n",
+      "Satisfaction scores: {1: 1.0, 2: 1.0, 3: 1.0, 4: 1.0, 5: 1.0}\n",
+      "\n",
+      "Iteration 4:\n",
+      "User 1 recommendations: [104875, 6350, 36509, 631, 130520]\n",
+      "User 2 recommendations: [76093, 8965, 27155, 117646, 78637]\n",
+      "User 3 recommendations: [116941, 79132, 27155, 43932, 3054]\n",
+      "User 4 recommendations: [72165, 56152, 104875, 27683, 198]\n",
+      "User 5 recommendations: [631, 47124, 1907, 8965, 2092]\n",
+      "Group recommendations: [104875, 631, 8965, 27155, 6350, 36509, 130520, 76093, 117646, 78637, 116941, 79132, 43932, 3054, 72165, 56152, 27683, 198, 47124, 1907, 2092]\n",
+      "Satisfaction scores: {1: 1.0, 2: 1.0, 3: 1.0, 4: 1.0, 5: 1.0}\n",
+      "\n",
+      "Iteration 5:\n",
+      "User 1 recommendations: [546, 2092, 116941, 43932, 3054]\n",
+      "User 2 recommendations: [98243, 3054, 6350, 26701, 47124]\n",
+      "User 3 recommendations: [85261, 2367, 546, 6350, 8830]\n",
+      "User 4 recommendations: [85261, 2054, 26590, 2617, 36509]\n",
+      "User 5 recommendations: [76093, 117646, 106696, 4306, 62999]\n",
+      "Group recommendations: [546, 3054, 6350, 85261, 2092, 116941, 43932, 98243, 26701, 47124, 2367, 8830, 2054, 26590, 2617, 36509, 76093, 117646, 106696, 4306, 62999]\n",
+      "Satisfaction scores: {1: 1.0, 2: 1.0, 3: 1.0, 4: 1.0, 5: 1.0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "group_users = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "# Satisfaction scores for the users (initially all unsatisfied)\n",
+    "satisfaction_scores = {user: 0.0 for user in group_users}\n",
+    "\n",
+    "# Keep track of movies already recommended for each user\n",
+    "user_history = {user: set() for user in group_users}\n",
+    "\n",
+    "# Function to recommend items to a single user based on their ratings\n",
+    "def recommend_for_user(user_id, num_recommendations=5):\n",
+    "    # Get movies rated highly by the user\n",
+    "    user_ratings = ratings[ratings['userId'] == user_id]\n",
+    "    high_rated_movies = user_ratings[user_ratings['rating'] >= 4.0]\n",
+    "    \n",
+    "    # Get genres of highly-rated movies\n",
+    "    high_rated_movie_ids = high_rated_movies['movieId'].unique()\n",
+    "    high_rated_genres = movies[movies['movieId'].isin(high_rated_movie_ids)]['genres']\n",
+    "    genre_set = set([genre for genres in high_rated_genres for genre in genres])\n",
+    "    \n",
+    "    # Recommend movies with similar genres not yet rated or recommended by the user\n",
+    "    candidate_movies = movies[~movies['movieId'].isin(user_ratings['movieId'])]\n",
+    "    candidate_movies = candidate_movies.copy()  # Avoid SettingWithCopyWarning\n",
+    "    candidate_movies['genre_match'] = candidate_movies['genres'].apply(lambda x: len(set(x) & genre_set))\n",
+    "    \n",
+    "    # Exclude already recommended movies\n",
+    "    already_recommended = user_history[user_id]\n",
+    "    candidate_movies = candidate_movies[~candidate_movies['movieId'].isin(already_recommended)]\n",
+    "    \n",
+    "    # Sort by genre match and select top recommendations\n",
+    "    recommended_movies = candidate_movies.sort_values(by='genre_match', ascending=False).head(num_recommendations)\n",
+    "    recommended_movie_ids = recommended_movies['movieId'].tolist()\n",
+    "    \n",
+    "    # Update user history\n",
+    "    user_history[user_id].update(recommended_movie_ids)\n",
+    "    \n",
+    "    return recommended_movie_ids\n",
+    "\n",
+    "# Function to aggregate individual recommendations into group recommendations\n",
+    "def aggregate_group_recommendations(user_recommendations, weights):\n",
+    "    recommendation_scores = defaultdict(float)\n",
+    "    for user, recommendations in user_recommendations.items():\n",
+    "        weight = weights[user]\n",
+    "        for movie_id in recommendations:\n",
+    "            recommendation_scores[movie_id] += weight\n",
+    "    # Sort movies by aggregated score\n",
+    "    sorted_recommendations = sorted(recommendation_scores.items(), key=lambda x: -x[1])\n",
+    "    return [movie[0] for movie in sorted_recommendations]\n",
+    "\n",
+    "\n",
+    "# Function to simulate multiple iterations with dynamic recommendations\n",
+    "num_iterations = 5\n",
+    "for iteration in range(1, num_iterations + 1):\n",
+    "    print(f\"\\nIteration {iteration}:\")\n",
+    "    \n",
+    "    # Single user recommendations\n",
+    "    user_recommendations = {}\n",
+    "    for user in group_users:\n",
+    "        user_recommendations[user] = recommend_for_user(user)\n",
+    "        print(f\"User {user} recommendations: {user_recommendations[user]}\")\n",
+    "    \n",
+    "    # Calculate weights for group aggregation\n",
+    "    weights = {user: 1.0 + (1.0 - satisfaction_scores[user]) for user in group_users}\n",
+    "    \n",
+    "    # Group recommendations\n",
+    "    group_recommendations = aggregate_group_recommendations(user_recommendations, weights)\n",
+    "    print(f\"Group recommendations: {group_recommendations}\")\n",
+    "    \n",
+    "    # Evaluate satisfaction scores\n",
+    "    for user in group_users:\n",
+    "        # Check how many of the user's recommendations are in the group recommendations\n",
+    "        matched_recommendations = set(user_recommendations[user]) & set(group_recommendations)\n",
+    "        if len(matched_recommendations) >= 3:  # At least 3 recommendations in group recommendations\n",
+    "            satisfaction_scores[user] = min(1.0, satisfaction_scores[user] + 0.5)  # Increase satisfaction\n",
+    "        else:\n",
+    "            satisfaction_scores[user] = max(0.0, satisfaction_scores[user] - 0.5)  # Decrease satisfaction\n",
+    "    \n",
+    "    # Print satisfaction scores\n",
+    "    print(f\"Satisfaction scores: {satisfaction_scores}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -553,7 +692,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "bbthti",
+   "display_name": "recsys",
    "language": "python",
    "name": "python3"
   },
@@ -567,7 +706,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
